src/app/widget/widget.component.scss
/* ... */
.widget-chat-message-agent {
  display: flex;
  //float: left;
  width: auto;
  height: auto;
  margin-top: 25px;
  margin-left: 5px;
  &.button{ //message-type button
    .agent-message{
      width: 100%;
      .structured-message-area{
        width: 100%;
        margin: 5px 2px;

        .structure-message-chips{
          top: 0;
          }
        }

      mat-chip.mat-chip{
        margin: 2px !important;

        &.selected-chip{
          color: #fff !important;
          opacity: 1;
          }
        }
      }
    }

  .agent-message {
    display: grid;
    width: auto;
    max-width: 80%;
    // min-width: 85px;
    border: 1px solid #f2f2f2;
    background: #f2f2f2;
    border-radius: 0 3px 3px 10px;
    padding: 0 10px;
    //word-break: break-word;

    .header {
      display: inline-flex;
      justify-content: space-between;
    }

    .name {
      font-family: "Roboto";
      font-size: 9px;
      font-weight: 500;
      font-style: normal;
      text-align: left;
      color: #3e3e3e;
      word-break: break-word;
    }

    .message {
      font-family: "Roboto";
      font-size: 12px;
      font-weight: normal;
      line-height: 18px;
      font-style: normal;
      text-align: left;
      color: #000000;
      width: auto;
      //line-break: anywhere;
    }

    .message-option {
      position: relative;
      top: 0px;
      font-size: 14px;
      right: -10px;
      cursor: pointer;
      color: #a2a2a2;
    }
  }

  .agent-img {
    height: auto;
    border: 1px solid $white-color;
    border-radius: 0px 10px 0px 0px;
    background: $white-color;
    padding: 0px;
    position: relative;
    left: 5px;
    width: 35px;

    img {
      margin-left: -8px;
    }
  }

  .bot-img {
    height: auto;
    border: 1px solid $white-color;
    border-radius: 0px 10px 0px 0px;
    background: $white-color;
    padding: 0px;
    position: relative;
    left: 5px;
    width: 35px;

    .custom-img {
      border-radius: 50%;
    }

    img {
      margin-left: 0px;
      margin-top: 0px;
      width: 25px;
      height: 25px;
    }
  }

  .time {
    position: relative;
    height: 2px;
    font-family: "Roboto";
    font-size: 9px;
    font-weight: normal;
    font-style: normal;
    color: #777777;
    bottom: 0px;
    max-width: inherit;
    left: 0px;
    min-width: inherit;
    padding-left: 0px;
    width: -webkit-fill-available;
  }
}

/*/--------------------/*/
/*/Style for chat area/*/
/*/------------------/*/

.widget-composer {
  display: flex;
  position: absolute;
  bottom: 10px;
  width: 100%;
  left: 5px;
  z-index: 1;

  &.main-composer-area {
    position: fixed;
    width: calc(100% - 20px);
  }
  
  .emoji-btn {
    position: absolute;
    bottom: 10px;
    left: 5px;
    font-size: 20px;
    cursor: pointer;
    z-index: 999999;
  }

  .widget-chat-composer {
    display: block;
    border-radius: 10px;
    border: none;
    height: 40px;
    padding: 0 38px;
    outline: none;
    width: 100%;
    font-size: 13px !important;
    background: #eff2f7;
    color: #3e3e3e;
    margin: 0;
    align-content: center;
  }

  .send-btn {
    position: absolute;
    right: 12px;
    bottom: 10px;
    cursor: pointer;
    font-size: 20px;
  }
}

.widget-chat-composer.composer-disabled {
  padding: 0px 38px 16px 40px !important;
}


.error-icon {
  text-align: center;
  display: grid;
  font-size: 20px;
  font-weight: 600;
  font-family: "Roboto";
  position: inherit;
  opacity: 0.75;
  color: var(--main-color);
  top: 20%;

  .error-emoji {
    font-size: 100px;
    font-weight: 600;
  }
}

.error-message {
  position: inherit;
  font-family: "Roboto";
  font-size: 13px;
  font-weight: normal;
  // line-height: 16px;
  font-style: normal;
  text-align: center;
  color: var(--main-color);
  top: 15%;
  padding: 30px;
}

.error-message h4 {
  font-weight: 500;
}

.widget-error-button {
  position: inherit;
  bottom: 5px;
  width: 100%;
  left: 0px;

  .widget-error-trigger {
    font-family: "Roboto";
    font-style: normal;
    text-align: center !important;
    width: 100%;
    font-size: 14px;
    font-weight: 500;
    height: 45px;
    line-height: 34px;
    border: 0;
    border-radius: 7px;
    display: block;
    margin: 0 auto;
    cursor: pointer;
    max-width: 300px;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background: #eff2f7;
    color: var(--main-color);
  }

  .call-btn {
    margin: 0 auto 10px !important;
  }
}

mat-spinner {
  width: 80px;
  height: 80px;
  position: absolute;
  z-index: 9999999;
  top: 45%;
  left: 45%;
  transform: translate(-25%, -25%);
  display: block;
}

//Composer Preview File
.file-preview-cover {
  display: inline-block;
  position: absolute;
  background: #f1f1f1;
  bottom: 50px;
  left: 35px;

  mat-icon {
    // position: absolute;
    // right: 0;
    // background: rgba(255, 255, 255, 0.4);
    // border-radius: 100%;
    // font-size: 14px;
    // text-align: center;
    // vertical-align: middle;
    // line-height: 24px;
    // color: #000;
    cursor: pointer;

    &:hover {
      background: rgba(0, 0, 0, 0.3);
    }
  }
}
/* ... */

